feat: Se agrega el reporte ABC